Fixed problem with handler interceptor, fixed adding duplicated paths.